--- a/app/src/main/res/layout/apiary_row_item.xml
+++ b/app/src/main/res/layout/apiary_row_item.xml
@@ -13,8 +13,9 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:contentDescription="@string/picture"
+            android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_menu_gallery" />
 
         <TableLayout
@@ -35,6 +36,7 @@
                     android:layout_weight="1"
                     android:contentDescription="@string/apiaryName"
                     android:hint="Name"
+                    android:paddingStart="5dp"
                     android:textSize="40dp" />
             </TableRow>
 
@@ -47,6 +49,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="Apiary Location"
+                    android:padding="5dp"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/lblHiveCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:text="Hives count :"
                     android:textSize="20dp" />
 
                 <TextView
@@ -55,6 +66,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="0"
+                    android:padding="5dp"
                     android:textSize="20dp" />
             </TableRow>
         </TableLayout>
