--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="com.beekeeperpro.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_apiaryFragment"
+            app:destination="@id/apiaryFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -22,4 +26,15 @@
         android:name="com.beekeeperpro.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+    <fragment
+        android:id="@+id/apiaryFragment"
+        android:name="com.beekeeperpro.ui.home.ApiaryFragment"
+        android:label="fragment_apiary"
+        tools:layout="@layout/fragment_apiary" >
+        <argument
+            android:name="id"
+            app:argType="integer" />
+    </fragment>
+
+
 </navigation>
