--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/save_button"
+        android:orderInCategory="1"
+        android:title="@string/save"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
 </menu>
