--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_nav_home_to_apiaryFragment"
             app:destination="@id/apiaryFragment" />
+        <action
+            android:id="@+id/action_nav_home_to_addApiaryFragment"
+            app:destination="@id/addApiaryFragment" />
     </fragment>
 
     <fragment
@@ -34,6 +37,15 @@
         <argument
             android:name="id"
             app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/addApiaryFragment"
+        android:name="com.beekeeperpro.ui.home.AddApiaryFragment"
+        android:label="fragment_add_apiary"
+        tools:layout="@layout/fragment_add_apiary" >
+        <action
+            android:id="@+id/action_addApiaryFragment_to_nav_home"
+            app:destination="@id/nav_home" />
     </fragment>
 
 
