--- a/app/src/main/res/layout/fragment_hive_list.xml
+++ b/app/src/main/res/layout/fragment_hive_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.apiary.ApiaryFragment">
+    tools:context=".ui.hive.HiveListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/hiveList"
