--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.beekeeperpro.ui.home.HomeFragment"
+        android:name="com.beekeeperpro.ui.home.ApiaryListFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_apiary_list" >
         <action
             android:id="@+id/action_nav_home_to_apiaryFragment"
             app:destination="@id/apiaryFragment" />
@@ -31,9 +31,9 @@
         tools:layout="@layout/fragment_slideshow" />
     <fragment
         android:id="@+id/apiaryFragment"
-        android:name="com.beekeeperpro.ui.apiary.ApiaryFragment"
+        android:name="com.beekeeperpro.ui.hive.HiveListFragment"
         android:label="fragment_apiary"
-        tools:layout="@layout/fragment_apiary" >
+        tools:layout="@layout/fragment_hive_list" >
         <argument
             android:name="id"
             app:argType="integer" />
@@ -47,6 +47,11 @@
             android:id="@+id/action_addApiaryFragment_to_nav_home"
             app:destination="@id/nav_home" />
     </fragment>
+    <fragment
+        android:id="@+id/addHiveFragment"
+        android:name="com.beekeeperpro.ui.hive.AddHiveFragment"
+        android:label="fragment_add_hive"
+        tools:layout="@layout/fragment_add_hive" />
 
 
 </navigation>
