--- a/app/src/main/res/layout/hive_row_item.xml
+++ b/app/src/main/res/layout/hive_row_item.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="@string/hive_name"
+        android:textColorHint="#78909C"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="@string/hive_code"
+        android:textColorHint="#757575"
         android:textSize="14sp"
         android:textStyle="italic" />
 
@@ -30,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="@string/hiveStrength"
+        android:textColorHint="#757575"
         android:textSize="14sp" />
 
     <TextView
@@ -38,13 +41,23 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="@string/hive_creation_date"
+        android:textColorHint="#757575"
         android:textSize="14sp" />
+
+    <Button
+        android:id="@+id/inspection_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_inspection" />
 
     <ImageButton
         android:id="@+id/action_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/action_delete"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         app:srcCompat="@android:drawable/ic_delete" />
 
 
