Inspection list ok

--- a/app/src/main/res/layout/apiary_list_fragment.xml
+++ b/app/src/main/res/layout/apiary_list_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.apiary.ApiaryListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ApiaryList"
+        android:id="@+id/apiary_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
