--- a/app/src/main/res/layout/hive_list_fragment.xml
+++ b/app/src/main/res/layout/hive_list_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.hive.HiveListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/hiveList"
+        android:id="@+id/hive_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/hive_row_item"
