--- a/app/src/main/res/layout/inspection_list_fragment.xml
+++ b/app/src/main/res/layout/inspection_list_fragment.xml
@@ -3,11 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InspectionListFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.inspection.InspectionListFragment">
 
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/inspection_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/apiary_row_item"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 </FrameLayout>
