--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -67,11 +67,14 @@
     </fragment>
     <fragment
         android:id="@+id/inspection_list_fragment"
-        android:name="com.beekeeperpro.InspectionListFragment"
+        android:name="com.beekeeperpro.ui.inspection.InspectionListFragment"
         tools:layout="@layout/inspection_list_fragment" >
         <argument
             android:name="hive"
             app:argType="com.beekeeperpro.data.model.Hive" />
+        <action
+            android:id="@+id/action_inspection_list_fragment_to_add_Inspection_fragment"
+            app:destination="@id/add_Inspection_fragment" />
     </fragment>
 
 
