--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -15,8 +15,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.BeekeeperPro.PopupOverlay" >
+            android:theme="@style/Theme.BeekeeperPro.Toolbar"
+            app:popupTheme="@style/Theme.BeekeeperPro.PopupOverlay">
 
         </androidx.appcompat.widget.Toolbar>
 
