--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.BeekeeperPro" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.BeekeeperPro" parent="Theme.AppCompat.DayNight">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
         <item name="colorOnPrimary">@color/black</item>
@@ -11,6 +11,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/primaryDarkColor</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Theme.BeekeeperPro.Toolbar" parent="Theme.BeekeeperPro">
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/black</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.BeekeeperPro.NoActionBar">
