--- a/app/src/main/res/layout/apiary_add_fragment.xml
+++ b/app/src/main/res/layout/apiary_add_fragment.xml
@@ -33,14 +33,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:importantForAutofill="no"
                 android:inputType="textPersonName"
-                android:text=""
                 android:textSize="20sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/lblApiaryLocation"
@@ -59,8 +59,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:importantForAutofill="no"
                 android:inputType="textPersonName"
-                android:text=""
                 android:textSize="20sp" />
         </TableRow>
 
@@ -83,7 +83,7 @@
                 android:id="@+id/locationBt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Locate" />
+                android:text="@string/locate" />
 
         </TableRow>
 
@@ -108,8 +108,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:importantForAutofill="no"
                 android:inputType="textPersonName"
-                android:text=""
                 android:textSize="20sp" />
         </TableRow>
 
@@ -134,8 +134,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:importantForAutofill="no"
                 android:inputType="textPersonName"
-                android:text=""
                 android:textSize="20sp" />
         </TableRow>
 
