--- a/app/src/main/res/layout/hive_add_fragment.xml
+++ b/app/src/main/res/layout/hive_add_fragment.xml
@@ -41,7 +41,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/lblHiveCode"
@@ -63,7 +63,8 @@
                 android:inputType="text"
                 android:text=""
                 android:textSize="20sp"
-                android:hint="@string/code"/>
+                android:importantForAutofill="no"
+                android:hint="@string/code" />
         </TableRow>
 
         <TableRow
@@ -84,7 +85,7 @@
             <com.beekeeperpro.utils.BPSeekbar
                 android:id="@+id/hiveSeekbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </TableRow>
 
@@ -110,6 +111,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="date"
+                android:importantForAutofill="no"
                 android:textSize="20sp" />
         </TableRow>
 
@@ -135,6 +137,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="date"
+                android:importantForAutofill="no"
                 android:textSize="20sp" />
         </TableRow>
 
