--- a/app/src/main/res/layout/inspection_add_fragment.xml
+++ b/app/src/main/res/layout/inspection_add_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -57,6 +56,7 @@
                 android:layout_weight="1"
                 android:hint="@string/hive_condition_remarks"
                 android:inputType="textShortMessage|none"
+                android:importantForAutofill="no"
                 android:minHeight="48dp" />
         </TableRow>
 
@@ -79,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/queen_condition_remarks"
+                android:importantForAutofill="no"
                 android:inputType="textShortMessage|none"
                 android:minHeight="48dp" />
         </TableRow>
@@ -101,15 +102,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:importantForAutofill="no"
                 android:hint="@string/phytosanitary_used_remarks"
                 android:inputType="textShortMessage|none"
                 android:minHeight="48dp" />
         </TableRow>
     </TableLayout>
+
     <TextView
         android:text="@string/attention_points"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"/>
+        android:layout_width="match_parent" />
+
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/attention_points_chipgroup"
         android:layout_width="match_parent"
