--- a/app/src/main/res/layout/inspection_list_fragment.xml
+++ b/app/src/main/res/layout/inspection_list_fragment.xml
@@ -12,6 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/apiary_row_item"
+        tools:listitem="@layout/inspection_row_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </FrameLayout>
