--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -44,8 +44,8 @@
             android:id="@+id/action_hives_list_fragment_to_addInspection"
             app:destination="@id/add_Inspection_fragment" />
         <action
-            android:id="@+id/action_hives_list_fragment_to_inspectionListFragment"
-            app:destination="@id/inspection_list_fragment" />
+            android:id="@+id/action_hives_list_fragment_to_hive_fragment"
+            app:destination="@id/hive_fragment" />
     </fragment>
     <fragment
         android:id="@+id/add_apiary_fragment"
@@ -72,9 +72,17 @@
         <argument
             android:name="hive"
             app:argType="com.beekeeperpro.data.model.Hive" />
+    </fragment>
+    <fragment
+        android:id="@+id/hive_fragment"
+        android:name="com.beekeeperpro.ui.hive.HiveFragment"
+        tools:layout="@layout/hive_fragment" >
         <action
-            android:id="@+id/action_inspection_list_fragment_to_add_Inspection_fragment"
+            android:id="@+id/action_hive_fragment_to_add_Inspection_fragment"
             app:destination="@id/add_Inspection_fragment" />
+        <argument
+            android:name="hive"
+            app:argType="com.beekeeperpro.data.model.Hive" />
     </fragment>
 
 
