--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.BeekeeperPro" parent="Theme.AppCompat.DayNight">
+    <style name="Theme.BeekeeperPro" parent="Theme.MaterialComponents.Light">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryDarkColor</item>
         <item name="colorOnPrimary">@color/black</item>
@@ -10,6 +10,7 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/primaryDarkColor</item>
+        <item name="android:windowBackground">@color/primaryLightColor</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -17,6 +18,7 @@
         <item name="android:textColorPrimary">@color/black</item>
         <item name="android:textColorSecondary">@color/black</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:background">@color/primaryColor</item>
     </style>
 
     <style name="Theme.BeekeeperPro.NoActionBar">
